# batchmark

./: README.md  batchmark.example.toml  pyproject.toml
batchmark/: aggregate_command.py  aggregate_formatter.py  aggregator.py  annotation_command.py  annotation_formatter.py  annotator.py  archive_formatter.py  archiver.py  balancer.py  balancer_formatter.py  baseline.py  baseline_formatter.py  bucket_command.py  bucket_formatter.py  bucketer.py  cache.py  classifier.py  classifier_command.py  classifier_formatter.py  cli.py  compact_formatter.py  compactor.py  comparator.py  comparer_command.py  config.py  correlator.py  correlator_formatter.py  deduplicator.py  diff_formatter.py  differ.py  dispatcher.py  evolver.py  evolver_command.py  evolver_formatter.py  exporter.py  exporter_command.py  filter.py  flattener.py  formatter.py  group_command.py  (+66 more)
tests/: test_aggregate_formatter.py  test_aggregator.py  test_annotation_command.py  test_annotator.py  test_archiver.py  test_balancer.py  test_baseline.py  test_baseline_formatter.py  test_bucket_formatter.py  test_bucketer.py  test_cache.py  test_classifier.py  test_cli.py  test_compact_formatter.py  test_compactor.py  test_comparator.py  test_comparer_command.py  test_config.py  test_correlator.py  test_deduplicator.py  test_differ.py  test_evolver.py  test_evolver_formatter.py  test_exporter.py  test_exporter_command.py  test_filter.py  test_flattener.py  test_formatter.py  test_group_formatter.py  test_grouper.py  test_heatmap.py  test_heatmap_formatter.py  test_inspector.py  test_label_command.py  test_labeler.py  (+39 more)
