[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "batchmark"
version = "0.1.0"
description = "CLI tool for running and comparing benchmark suites across git branches"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
batchmark = "batchmark.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["batchmark"]

[tool.coverage.report]
show_missing = true
